--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/ericyahhh/spectron-cucumber-example/issues"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "chai": "^4.1.2",
     "cucumber": "^4.0.0",
     "electron": "^1.8.4",
